<resources>
    <string name="app_name">RUPizzeria</string>
    <string name="order_chicago_style_pizza">Order Chicago-Style Pizza</string>
    <string name="ru_pizzeria">RU Pizzeria</string>
    <string name="order_new_york_style_pizza">Order New York-Style Pizza</string>
    <string name="view_current_order">View Current Order</string>
    <string name="view_all_orders">View all Orders</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="select_size">Select Size:</string>
    <string name="select_pizza_type">Select Pizza Type:</string>
    <string name="order_pizza">Order Pizza</string>
    <string name="textview">TextView</string>
    <string name="select_toppings">Select Toppings:</string>
    <string name="chicago_style_rb">Chicago</string>
    <string name="new_york_style_rb">New York</string>
    <string name="select_style">Select Style:</string>
    <string name="crust">Crust:</string>
    <string name="display_crust_text">Crust Type</string>
    <string name="order_pizzas">Order Pizzas</string>
    <string name="add_to_order">Add to Order</string>
    <string name= "placed_orders">Placed Orders</string>
    <string name="order_number">Orders</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="current_order">Current Order</string>
    <string name="select_item">Select Item to remove</string>
    <string name="remove_item">Remove Item</string>
    <string name="orderTotalText">Order Total:</string>
    <string name="order_total">Order Total</string>
    <string name="salesTaxText">Sales Tax:</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="subtotalText">Subtotal:</string>
    <string name="sub_total">Subtotal</string>
    <string name="place_order">Place Order</string>
    <string name="price_label">Price</string>
    <string name="hand_tossed">Hand-Tossed</string>
    <string name="pan">Pan</string>
    <string name="pizza_style">Pizza Style</string>
    <string name="pizza_type">Pizza Type</string>
    <string name="crust_type">Crust</string>
    <string name="size">Size</string>
    <string name="toppings">Toppings</string>
    <string name="select_Orderitems">Select</string>
    <string name="btn_add">Add</string>
    <string name="todo">TODO</string>
    <string name="plus_add_sign">+</string>
    <string name="plus_sign">+</string>
    <string name="price">Price</string>
    <string name="btn_remove">Remove</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="subtotalVOTextView">Subtotal:</string>
    <string name="subtotalAmountVOTextView">Subtotal</string>
    <string name="checkbox">Select</string>
    <string name="checkboxFinal">Select</string>

</resources>