<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/RUPizzeriaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/alegreya"
        android:text="@string/ru_pizzeria"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="398dp"
        android:layout_height="110dp"
        android:layout_marginTop="153dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/CStyleIcon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="12dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/chicagopizzaimage"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:drawablePadding="-15sp"
            android:text="this is text"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alegreya"
            android:text="@string/order_chicago_style_pizza"
            android:textAlignment="center"
            android:textSize="24sp"
            android:translationY="40dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="397dp"
        android:layout_height="92dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageButton
            android:id="@+id/NYStyleIcon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/newyorkstylepizza" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/alegreya"
            android:text="@string/order_new_york_style_pizza"
            android:textAlignment="center"
            android:textSize="24sp"
            android:translationY="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="395dp"
        android:layout_height="94dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageButton
            android:id="@+id/currentOrderIcon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/shoppingcart" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/alegreya"
            android:text="@string/view_current_order"
            android:textAlignment="center"
            android:textSize="24sp"
            android:translationY="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageButton
            android:id="@+id/ordersIcon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ordersplacedpizzeria" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:fontFamily="@font/alegreya"
            android:text="@string/view_all_orders"
            android:textAlignment="center"
            android:textSize="24sp"
            android:translationY="25dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>